# notes2md

./: .gitignore  Cargo.toml  README.md  export-notes.applescript
src/: lib.rs  main.rs
