[package]
name = "notes-exporter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
html5ever = "0.29"
markup5ever_rcdom = "0.3"
base64 = "0.22"
walkdir = "2.5"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
scraper = "0.22"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
html2md = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
